--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+<!--    <data>-->
+<!--        <import android:type="android.view.View"/>-->
+<!--        <variable-->
+<!--            android:name="viewModel"-->
+<!--            android:type="com.example.application.MyViewModel">-->
+
+<!--        </variable>-->
+<!--    </data>-->
+
     <FrameLayout
-        android:id="@+id/inner_frame_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></FrameLayout>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <fragment
+            android:name="com.example.application.DataListFragment"
+            android:id="@+id/inner_frame_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </fragment>
+    </FrameLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
